--- a/index.html
+++ b/index.html
@@ -654,13 +654,13 @@
                 <img src="logo\Sain.png" alt="Image">
                 <span>Take Care</span>
                 <div class="border" id="border5"></div>
-                <!-- Sports center EPFL-UNIL -->
+                <!-- Sports Universitaires Lausanne -->
                 <div class="bubble smaller" id="SportscenterEPFL-UNIL">
                     <a href="https://sport.unil.ch/">
                         <img src="logo\logo-centresports.png" alt="Image">
                     </a>
                     <div class="text-description">
-                        <h3>Sports center EPFL-UNIL</h3>
+                        <h3>Sports Universitaires Lausanne (SUL)</h3>
                         Lausanne University Sports Center offers the UNIL-EPFL community more than 120 sports
                         activities.
                     </div>
@@ -705,9 +705,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Guided meditation</h3>
-                        The guided meditations are open to the entire university community, regardless of the spiritual
-                        tradition of the participant. During 10-15′, indications are given (in French and English) then
-                        during the remaining 15-20′, it is complete silence.
+                        Come and sit down, away from what scatters and hustle you, and reconnect with yourself. Come and
+                        take the time to close your eyes and appreciate the only moment we have the opportunity to live:
+                        the present one. The guided meditation times are intended to be humanistic, that is, open to the
+                        entire university community, regardless of the spiritual tradition of the participant. During
+                        10-15′, indications are given (in French and English) then during the remaining 15-20′, it is
+                        complete silence.
                     </div>
                 </div>
                 <!-- Apiculture -->
@@ -726,7 +729,7 @@
                 </div>
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
-                    <a href="https://unipoly.ch/jardins-campus-farmers/">
+                    <a href="https://unipoly.ch/jardins-campus-farmers-english/">
                         <img src="logo\jardin_campus_farmers2.png" alt="Image">
                     </a>
                     <div class="text-description">
@@ -745,7 +748,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Dorigny Forest</h3>
-                        It is a small forest close to UNIL, very beautiful and quiet.
+                        Located adjacent to campus, Dorigny forest provides a peaceful sanctuary for relaxation, hiking,
+                        and picnicking. It's also an excellent space to connect with nature and deepen your appreciation
+                        for the environment.
                     </div>
                 </div>
             </div>
