--- a/index_fr.html
+++ b/index_fr.html
@@ -623,13 +623,13 @@
                 <span>Prends soin</span>
                 <span>de toi</span>
                 <div class="border" id="border5"></div>
-                <!-- Sports center EPFL-UNIL -->
+                <!-- Sports Universitaires Lausanne (SUL) -->
                 <div class="bubble smaller" id="SportscenterEPFL-UNIL">
                     <a href="https://sport.unil.ch/">
                         <img src="logo\logo-centresports.png" alt="Image">
                     </a>
                     <div class="text-description">
-                        <h3>Sports center EPFL-UNIL</h3>
+                        <h3>Sports Universitaires Lausanne (SUL)</h3>
                         Les Sports universitaires Lausanne proposent à la communauté UNIL-EPFL plus de 120 activités
                         sportives.
                     </div>
@@ -656,11 +656,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Réseau Soutien et Confiance (Trust and Support Network, TSN)</h3>
-                        Le Réseau Soutien et Confiance de l’EPFL est formé entre autres du Service des affaires
-                        estudiantines, de l’Ecole doctorale, du Bureau de l’égalité des chances, du Point Santé, de la
-                        Personne de confiance et des responsables RH. Il réunit des instances internes et externes de
-                        l’EPFL avec un mandat de premier accueil et de prise en charge de situations de harcèlement,
-                        discrimination et de risques psychosociaux.
+                        Le Réseau de Confiance et de Soutien de l'EPFL comprend, entre autres, le département des
+                        Affaires étudiantes, l'École doctorale, le Bureau de l'Égalité des chances, le Point Santé, la
+                        Personne de confiance et les responsables des ressources humaines. Il réunit des instances
+                        internes et externes de l'EPFL ayant pour mission de fournir une assistance initiale dans les
+                        situations de harcèlement, de discrimination et d'autres risques psychosociaux.
                     </div>
                 </div>
                 <!-- Guided meditation -->
@@ -672,9 +672,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Méditation guidée</h3>
-                        Les temps de méditation guidée sont ouverts à toute la communauté universitaire, quelle que soit
-                        la tradition spirituelle du participant. Pendant 10-15′, des indications sont données (en
-                        français et en anglais) puis pendant les 15-20′ restants, c'est le silence complet.
+                        Venez vous asseoir, loin de l’éparpillement et de l’agitation, et vous reconnecter à vous-même.
+                        Venez prendre le temps de fermer les yeux et d’apprécier le seul moment qu’il nous soit donné de
+                        vivre: l’instant présent. Les temps de méditation guidée se veulent humanistes, c’est-à-dire
+                        ouverts à toute la communauté universitaire, peu importe la tradition spirituelle des
+                        participant·e·s. Pendant 10-15′, des indications sont données (en français et en anglais) puis
+                        pendant les 15-20′ restantes, c’est le silence complet.
                     </div>
                 </div>
                 <!-- Apiculture -->
@@ -693,7 +696,7 @@
                 </div>
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
-                    <a href="https://unipoly.ch/jardins-campus-farmers-english/">
+                    <a href="https://unipoly.ch/jardins-campus-farmers/">
                         <img src="logo\jardin_campus_farmers2.png" alt="Image">
                     </a>
                     <div class="text-description">
@@ -713,7 +716,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Forêt de Dorigny</h3>
-                        C'est une petite forêt proche de l'UNIL, très belle et calme.
+                        Située à proximité du campus, la forêt de Dorigny offre un sanctuaire paisible pour se détendre,
+                        faire de la randonnée et pique-niquer. C'est également un espace idéal pour se connecter avec la
+                        nature et approfondir votre appréciation de l'environnement.
                     </div>
                 </div>
             </div>
