--- a/index.html
+++ b/index.html
@@ -212,6 +212,25 @@
                         industry. The aim is to promote fashion that is shared, recycled and sustainable on campus.
                     </div>
                 </div>
+                <!-- Bibliothèque d’objets -->
+                <div class="bubble smaller" id="Bibliothèqued’objets">
+                    <a
+                        href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
+                        <img src="logo\biblio-d-objets.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Bibliothèque d’objets</h3>
+                        Some of your objects take up space? Don't use them anymore? Are they in good condition? Want to
+                        save
+                        some space? The library is here! Your objects will have the opportunity to be used and will
+                        delight
+                        students. It is also possible to lend the objects for a certain time and take them back
+                        afterwards.
+                        On Wednesday evening from 17pm, the House of Sustainability is open for the loan and reception
+                        of
+                        objects.
+                    </div>
+                </div>                
                 <!-- Meubléco -->
                 <div class="bubble smaller" id="Meubléco">
                     <a href="https://meubleco.unipoly.ch/">
@@ -225,25 +244,6 @@
                         resold at a low price to other students during our furniture fair organized for Marcheco which
                         will
                         take place in September 2023 at EPFL!
-                    </div>
-                </div>
-                <!-- Bibliothèque d’objets -->
-                <div class="bubble smaller" id="Bibliothèqued’objets">
-                    <a
-                        href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
-                        <img src="logo\biblio-d-objets.jpg" alt="Image">
-                    </a>
-                    <div class="text-description">
-                        <h3>Bibliothèque d’objets</h3>
-                        Some of your objects take up space? Don't use them anymore? Are they in good condition? Want to
-                        save
-                        some space? The library is here! Your objects will have the opportunity to be used and will
-                        delight
-                        students. It is also possible to lend the objects for a certain time and take them back
-                        afterwards.
-                        On Wednesday evening from 17pm, the House of Sustainability is open for the loan and reception
-                        of
-                        objects.
                     </div>
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
