--- a/index_fr.html
+++ b/index_fr.html
@@ -212,6 +212,21 @@
                         et de durabilité sur campus.
                     </div>
                 </div>
+                <!-- Bibliothèque d’objets -->
+                <div class="bubble smaller" id="Bibliothèqued’objets">
+                    <a
+                        href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
+                        <img src="logo\biblio-d-objets.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Bibliothèque d’objets</h3>
+                        Certains de vos objets prennent de la place ? Vous ne les utilisez plus ? Ils sont en bon état ?
+                        Vous souhaitez gagner un peu d'espace ? La bibliothèque est là ! Vos objets auront l'opportunité
+                        d'être utilisés et feront la joie d'étudiant·e·s. Il est aussi possible de prêter les objets
+                        pendant un certain temps et les reprendre par la suite. Le mercredi soir dès 17h, la Maison de
+                        la Durabilité est ouverte pour le prêt et la réception des objets.
+                    </div>
+                </div>                
                 <!-- Meubléco -->
                 <div class="bubble smaller" id="Meubléco">
                     <a href="https://meubleco.unipoly.ch/">
@@ -223,21 +238,6 @@
                         récupérer tes meubles en bon état les 17 juin, 24 juin et 1er juillet 2023. Ces meubles seront
                         revendus à bas prix à d’autres étudiants lors de notre foire aux meubles organisée pour Marcheco
                         qui aura lieu en septembre 2023 à l’EPFL !
-                    </div>
-                </div>
-                <!-- Bibliothèque d’objets -->
-                <div class="bubble smaller" id="Bibliothèqued’objets">
-                    <a
-                        href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
-                        <img src="logo\biblio-d-objets.jpg" alt="Image">
-                    </a>
-                    <div class="text-description">
-                        <h3>Bibliothèque d’objets</h3>
-                        Certains de vos objets prennent de la place ? Vous ne les utilisez plus ? Ils sont en bon état ?
-                        Vous souhaitez gagner un peu d'espace ? La bibliothèque est là ! Vos objets auront l'opportunité
-                        d'être utilisés et feront la joie d'étudiant·e·s. Il est aussi possible de prêter les objets
-                        pendant un certain temps et les reprendre par la suite. Le mercredi soir dès 17h, la Maison de
-                        la Durabilité est ouverte pour le prêt et la réception des objets.
                     </div>
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
