--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
                 <div class="bubble smaller" id="Associationdesétudiant·esvégan·esetanimalistes">
-                    <a href="https://www.facebook.com/eva.unipoly/">
+                    <a href="https://unipoly.ch/eva-english/">
                         <img src="logo\EVA.png" alt="Image">
                     </a>
                     <div class="text-description">
@@ -554,9 +554,9 @@
                     </a>
                     <div class="text-description">
                         <h3>EPFL Changemakers</h3>
-                        A 12-week program for students ready to embark on a great learning journey, boost their
-                        innovation
-                        and entrepreneurial skills, reflect on their impact, and turn their idea into real-life project.
+                        Un programme de 12 semaines destiné aux étudiants prêts à se lancer dans un grand voyage
+                        d'apprentissage, à renforcer leurs compétences en matière d'innovation et d'entrepreneuriat, à
+                        réfléchir sur leur impact, et à transformer leur idée en un projet concret.
                     </div>
                 </div>
                 <!-- Ucreate -->
@@ -617,7 +617,13 @@
                     </a>
                     <div class="text-description">
                         <h3>Low Tech Lab</h3>
-                        The Low Tech Lab is a student association that aims to promote low-tech solutions on campus.
+                        What if we imagined more sustainable and locally-based technologies? We could choose to use
+                        simpler technologies that don't circumnavigate the planet several times before reaching us. This
+                        is the vision of technology advocated by the low-tech movement, as opposed to high-tech. These
+                        technologies adhere to three key principles in their design: usefulness, accessibility, and
+                        sustainability. The Low-tech Lab Lausanne aims to develop the low-tech approach within the EPFL
+                        campus and in the Lausanne region, as well as to support projects that embody a technically
+                        sustainable and desirable society.
                     </div>
                 </div>
                 <!-- rebuilt -->
@@ -627,25 +633,28 @@
                     </a>
                     <div class="text-description">
                         <h3>RebuiLT</h3>
-                        RebuiLT is a MAKE Initiative that aims to reuse and recycle construction waste.
+                        RebuiLT is the name of the student project launched by the Low Tech Lab Lausanne in February
+                        2022. It is the result of a reflection on the integration of Low Tech solutions in urban
+                        environments and the desire of students in the association to incorporate Low Tech into their
+                        curricula. Its ultimate goal is to construct a Low Tech community pavilion using reused building
+                        materials to demonstrate that environmentally sustainable construction methods exist and that a
+                        sustainable and desirable future is possible by meeting the needs of residents through Low Tech
+                        solutions.
                     </div>
                 </div>
                 <!-- Skil -->
                 <div class="bubble smaller" id="Skil">
-                    <a href="https://www.epfl.ch/labs/skil/en/skil-for-your-project/propose-a-project/">
+                    <a href="https://www.epfl.ch/labs/skil/en/about/">
                         <img src="logo\SKIL_logo.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Skil</h3>
                         The Student Kreativity and Innovation Lab (SKIL) is an ENAC initiative, which aims at promoting
-                        a
-                        new culture at EPFL by encouraging student initiative, creativity, and interdisciplinarity in a
-                        workshop environment permitting the realization of hands-on projects. This workshop, officially
-                        inaugurated in September 2018, is intended mainly for ENAC students, but is also open to BA and
-                        MA
-                        students from across EPFL. It supports projects by groups or individual students who wish to
-                        develop
-                        their own ideas and require a practical learning space.
+                        a new culture at EPFL by encouraging student initiative, creativity, and interdisciplinarity in
+                        a workshop environment permitting the realization of hands-on projects. This workshop,
+                        officially inaugurated in September 2018, is intended mainly for ENAC students, but is also open
+                        to BA and MA students from across EPFL. It supports projects by groups or individual students
+                        who wish to develop their own ideas and require a practical learning space.
                     </div>
                 </div>
             </div>
