--- a/index_fr.html
+++ b/index_fr.html
@@ -492,7 +492,7 @@
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
                 <div class="bubble smaller" id="Associationdesétudiant·esvégan·esetanimalistes">
-                    <a href="https://www.facebook.com/eva.unipoly/">
+                    <a href="https://unipoly.ch/eva/">
                         <img src="logo\EVA.png" alt="Image">
                     </a>
                     <div class="text-description">
@@ -584,8 +584,14 @@
                     </a>
                     <div class="text-description">
                         <h3>Low Tech Lab</h3>
-                        Le Low Tech Lab est un projet étudiant qui vise à promouvoir les technologies low tech sur le
-                        campus.
+                        Et si on imaginait des technologies plus sobres et plus locales ? On pourrait décider d’utiliser
+                        des technologies plus simples, qui ne font pas plusieurs fois le tour de la planète avant
+                        d’arriver chez nous. C’est la vision de la technologie défendue par le mouvement des low-techs,
+                        ou basses technologies, par opposition aux high-techs. Ces technologies répondent à trois grands
+                        principes dans leur conception : utiles, accessibles, durables. Le Low-tech Lab Lausanne a ainsi
+                        pour but de développer la démarche low-tech au sein du campus de l’EPFL et dans la région de
+                        Lausanne, ainsi que de soutenir des projets incarnant une société techniquement soutenable et
+                        souhaitable.
                     </div>
                 </div>
                 <!-- rebuilt -->
@@ -595,13 +601,18 @@
                     </a>
                     <div class="text-description">
                         <h3>RebuiLT</h3>
-                        RebuiLT est un projet étudiant qui vise à réutiliser les déchets de chantier dans la contruction
-                        urbaine.
+                        RebuiLT est le nom du projet étudiant lancé par le Low Tech Lab Lausanne en Février 2022. Il est
+                        le fruit d’une réflexion sur l’intégration de Low Techs en milieu urbain mais aussi de l’envie
+                        des étudiant.es de l’association d’intégrer la Low Tech dans leurs cursus. Il a pour but final
+                        de construire un pavillon communautaire Low Tech en matériaux de construction réemployés afin de
+                        montrer que des manières de construire soutenable écologiquement existent et qu’un avenir
+                        soutenable et désirable est possible en répondant aux besoins des habitant.es au travers de la
+                        Low Tech
                     </div>
                 </div>
                 <!-- Skil -->
                 <div class="bubble smaller" id="Skil">
-                    <a href="https://www.epfl.ch/labs/skil/en/skil-for-your-project/propose-a-project/">
+                    <a href="https://www.epfl.ch/labs/skil/en/about/">
                         <img src="logo\SKIL_logo.png" alt="Image">
                     </a>
                     <div class="text-description">
