--- a/index.html
+++ b/index.html
@@ -672,12 +672,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Espace-Transitions</h3>
-                        Espace-Transitions is a space for anyone wishing to express or share their views on
-                        sustainability
-                        issues on the UNIL/EPFL campus. From February 23, 2023, we will be present to welcome you around
-                        a
-                        meal discussion every Thursday from 12:15 to 13:45, at Espace Transitions! Find us on the ground
-                        floor of the Vortex, room 0046, right next to door B.
+                        The Espace Transitions is a project established to welcome reflections and feelings on sustainability issues, and subsequently, to offer support in taking action to help you find a project that suits you and/or provide you with tools to realize your own. To this end, the team will be present to welcome you for a meal and discussion every Thursday from 12:15 PM to 1:45 PM at the Transitions Space.
                     </div>
                 </div>
                 <!-- Trust and Support Network (TSN) -->
