--- a/index_fr.html
+++ b/index_fr.html
@@ -641,11 +641,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Espace-Transitions</h3>
-                        L'Espace-Transitions est un espace pour toute personne souhaitant s'exprimer ou partager son
-                        point de vue sur les questions de développement durable sur le campus UNIL/EPFL. Dès le 23
-                        février 2023, nous serons présents pour vous accueillir autour d'un repas discussion tous les
-                        jeudis de 12h15 à 13h45, à l'Espace Transitions ! Retrouvez-nous au rez-de-chaussée du Vortex,
-                        local 0046, juste à côté de la porte B.
+                        L'espace transitions est un projet mis en place afin d'accueillir les réflexions et les ressentis sur les questions de durabilité, et, dans un second temps, de proposer un accompagnement dans l'action afin de t'aider à trouver un projet qui te convient et/ou te donner certains outils pour réaliser le tien. Pour cela, l'équipe sera présent·e·x·s pour vous accueillir autour d'un repas discussion tous les jeudis de 12h15 à 13h45, à l'Espace Transitions.
                     </div>
                 </div>
                 <!-- Trust and Support Network (TSN) -->
