--- a/index.html
+++ b/index.html
@@ -670,8 +670,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Sports Universitaires Lausanne (SUL)</h3>
-                        Lausanne University Sports Center offers the UNIL-EPFL community more than 120 sports
-                        activities.
+                        The Lausanne University Sports (SUL) offer a variety of physical activities and sports to members of the University and the Swiss Federal Institute of Technology in Lausanne (EPFL) community in the fantastic setting of the University Sports Center at Dorigny.
                     </div>
                 </div>
                 <!-- Espace-Transitions -->
