--- a/index_fr.html
+++ b/index_fr.html
@@ -641,8 +641,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Sports Universitaires Lausanne (SUL)</h3>
-                        Les Sports universitaires Lausanne proposent à la communauté UNIL-EPFL plus de 120 activités
-                        sportives.
+                        Les Sports Universitaires Lausanne (SUL) proposent des activités physiques variées et du sport aux membres de la communauté de l’Université et de l’École polytechnique fédérale de Lausanne dans le fantastique cadre du Centre sportif universitaire de Dorigny.
                     </div>
                 </div>
                 <!-- Espace-Transitions -->
