--- a/index.html
+++ b/index.html
@@ -598,16 +598,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Make</h3>
-                        To confront students with the increasingly complex challenges and require them to work at the
-                        frontiers of various fields, MAKE projects are interdisciplinary in nature and help to acquire
-                        the
-                        necessary skills. The initiative provides teachers with Discovery Learning Labs (DLLs). Spaces
-                        including state-of-the-art equipment to offer practical work directly related to research or the
-                        industrial environment. Finally, the initiative also provides students (bachelor and master)
-                        with a
-                        professional consulting service and prototyping spaces to support them in the realization of
-                        their
-                        open projects.
+                        The MAKE initiative makes it possible to integrate interdisciplinarity, project-based learning, experimentation and prototyping into students’ curricula. The initiative provides teachers with Discovery Learning Labs (DLLs). Spaces including state-of-the-art equipment to offer practical work directly related to research or the industrial environment. Finally, the initiative also provides students (bachelor and master) with a professional consulting service and prototyping spaces to support them in the realization of their open projects.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
