--- a/index_fr.html
+++ b/index_fr.html
@@ -567,14 +567,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Make</h3>
-                        Pour confontrer les étudiant.e.s avec les défis qui gagne en complexité et nécessitent de
-                        travailler aux frontières de domaines variés, les projets MAKE sont de nature interdisciplinaire
-                        et aide à acquièrer les compétences nécessaires. L’initiative met à disposition des enseignantes
-                        et enseignants les Discovery Learning Labs (DLL). Des espaces comprenant des équipements de
-                        pointe permettant de proposer des travaux pratiques en lien direct avec la recherche ou le
-                        milieu industriel. Finalement, l’initiative fournit également aux étudiantes et étudiants
-                        (bachelor et master) un service de conseil professionnel et des espaces de prototypage pour les
-                        accompagner dans la concrétisation de leurs projets.
+                        L’initiative MAKE permet d’intégrer interdisciplinarité, apprentissage par projet, expérimentation et prototypage au cursus des étudiantes et étudiants. L’initiative met à disposition des enseignantes et enseignants les Discovery Learning Labs (DLL). Des espaces comprenant des équipements de pointe permettant de proposer des travaux pratiques en lien direct avec la recherche ou le milieu industriel. Finalement, l’initiative fournit également aux étudiantes et étudiants (bachelor et master) un service de conseil professionnel et des espaces de prototypage pour les accompagner dans la concrétisation de leurs projets.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
