--- a/index.html
+++ b/index.html
@@ -566,12 +566,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        The UCreate entrepreneurial program is for all members of the UNIL community : students,
-                        researchers,
-                        professors,
-                        employees and alumni. This bilingual and interdisciplinary program supports all types of
-                        projects.
-                        We particularly encourage projects with a social and/or environmental impact.
+                        The UCreate entrepreneurial program is open to all members of the UNIL community, including students, researchers, professors, employees, and alumni. This bilingual and interdisciplinary program provides support for various project types, with an emphasis on projects with a social and/or environmental impact.
                     </div>
                 </div>
                 <!-- Durabilis -->
