--- a/index_fr.html
+++ b/index_fr.html
@@ -536,11 +536,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        Le programme d'entrepreneuriat UCreate s’adresse à tou·te·s les membres de la communauté UNIL :
-                        étudiant·e·s,
-                        chercheur·euse·s, professeur·e·s, employé·e·s et alumni. Ce programme bilingue et
-                        interdisciplinaire soutient tous types de projets. Nous encourageons particulièrement les
-                        projets à impact social et/ou environnemental.
+                        Le programme d'entrepreunariat UCreate s’adresse à tou·te·s les membres de la communauté UNIL : étudiant·e·s, chercheur·euse·s, professeur·e·s, employé·e·s et alumni. Ce programme bilingue et interdisciplinaire offre un soutien pour différents types de projets, en mettant l'accent sur les projets ayant un impact social et/ou environnemental..
                     </div>
                 </div>
                 <!-- Durabilis -->
