--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="logo\Durabilite.png">
 </head>
 
 <body>
@@ -230,7 +231,7 @@
                         of
                         objects.
                     </div>
-                </div>                
+                </div>
                 <!-- Meubléco -->
                 <div class="bubble smaller" id="Meubléco">
                     <a href="https://meubleco.unipoly.ch/">
@@ -511,10 +512,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Ferme de Bassenges</h3>
-                        A collective of young farmers and engineers set up in 2020 at Ferme de Bassenges, near EPFL and
-                        the
-                        SwissTech Convention Center, has set itself the challenge of practicing organic, biodynamic and
-                        low-tech agriculture: it favors ancestral techniques such as animal traction and manual milking.
+                        Ferme de Bassenges is a farm founded in 2020 by a group of young farmers and engineers. Located
+                        near EPFL and the SwissTech Convention Center, its primary mission is to engage in organic,
+                        biodynamic, and low-tech agriculture.
                     </div>
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
