--- a/index.html
+++ b/index.html
@@ -524,18 +524,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Association des étudiant·es végan·es et animalistes</h3>
-                        EVA is Unipoly's hub representing vegan students and animal rights supporters. The EVA wishes to
-                        encourage an ethical and animal-friendly lifestyle, as well as in general, to raise awareness
-                        among
-                        the student community about the animal cause and animalism. It wants to offer the possibility of
-                        being able to feed and live as independently as possible from animal exploitation by
-                        significantly
-                        increasing the vegan offer in the catering places of university campuses. The EVA also wishes to
-                        bring together vegan students and people interested in veganism and animalism in a community
-                        focused
-                        on discussion and offer support and advice to students and collaborators wishing to adopt a
-                        vegan
-                        lifestyle.
+                        EVA is Unipoly's hub representing vegan students and animal rights supporters. It encourages an ethical and animal-friendly lifestyle, and offers the possibility to feed and live as independently as possible from animal exploitation by significantly increasing the vegan offer in the catering places of university campuses. The EVA also wishes to bring together vegan students and people interested in veganism and animalism in a community focused on discussion and offer support and advice to students and collaborators wishing to adopt a vegan lifestyle.
                     </div>
                 </div>
             </div>
