--- a/index_fr.html
+++ b/index_fr.html
@@ -498,15 +498,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Association des étudiant·es végan·es et animalistes</h3>
-                        EVA est le pôle d'Unipoly représentant les étudiant·e·s véganes et animalistes. L’EVA souhaite
-                        encourager un mode de vie éthique et respectueux des animaux, ainsi que de manière générale,
-                        sensibiliser la communauté estudiantine à la cause animale et à l’animalisme. Elle souhaite
-                        offrir la possibilité de pouvoir se nourrir et vivre le plus indépendamment possible de
-                        l’exploitation animale en augmentant de manière significative l’offre végétalienne dans les
-                        lieux de restauration des campus universitaires. L’EVA souhaite également rassembler les
-                        étudiant·e·s véganes et personnes intéressées par le véganisme et l’animalisme au sein d’une
-                        communauté tournée vers la discussion ainsi qu’offrir support et conseils aux étudiant·e·s et
-                        collaborateur·trice·s souhaitant adopter un mode de vie végane.
+                        EVA est le pôle d'Unipoly représentant les étudiants véganes et animalistes. Il encourage un mode de vie éthique et respectueux des animaux, et offre la possibilité de se nourrir et de vivre aussi indépendamment que possible de l'exploitation animale en augmentant de manière significative l'offre végétalienne dans les lieux de restauration des campus universitaires. L’EVA souhaite également rassembler les étudiant·e·s véganes et personnes intéressées par le véganisme et l’animalisme au sein d’une communauté tournée vers la discussion ainsi qu’offrir support et conseils aux étudiant·e·s et collaborateur·rice·s souhaitant adopter un mode de vie végane.
                     </div>
                 </div>
             </div>
