Ferme de bassenges

--- a/index.html
+++ b/index.html
@@ -512,9 +512,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ferme de Bassenges</h3>
-                        Ferme de Bassenges is a farm founded in 2020 by a group of young farmers and engineers. Located
-                        near EPFL and the SwissTech Convention Center, its primary mission is to engage in organic,
-                        biodynamic, and low-tech agriculture.
+                        Ferme de Bassenges is a farm founded in 2020 by a group of young farmers and engineers. Located near EPFL and the SwissTech Convention Center, its primary mission is to engage in organic, biodynamic, and low-tech agriculture.
                     </div>
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
