--- a/index_fr.html
+++ b/index_fr.html
@@ -485,10 +485,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ferme de Bassenges</h3>
-                        Ce collectif de jeunes agriculteurs, agricultrices et ingénieurs installé en 2020 à la Ferme de
-                        Bassenges, près de l’EPFL et du SwissTech Convention Center, s’est lancé le défi de pratiquer
-                        une agriculture biologique, biodynamique et low tech : il privilégie des techniques ancestrales,
-                        comme la traction animale et la traite manuelle.
+                        La Ferme de Bassenges est une ferme fondée en 2020 par un groupe de jeunes agriculteurs et d'ingénieurs. Située à proximité de l'EPFL et du SwissTech Convention Center, sa principale mission est de se consacrer à l'agriculture biologique, biodynamique et low-tech.
                     </div>
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
